Fix CSS grids overflowing on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,6 +15,7 @@
 
 .featureContents {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
@@ -23,6 +24,9 @@
   grid-template-columns: 10rem 1fr;
   gap: 0.5rem;
 }
+
+/* Set min-width: 0 to prevent expanding beyond bounds of the grid. */
+.inputGroup > * { min-width: 0; }
 
 .inputGroup > .label { text-align: right; }
 
